[build-system]
requires = ["setuptools", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "vcc"
description = "VdvCoundCore - Backend System for VdvCount"
authors = [{ name = "Sebastian Knopf", email = "mail@sebastian-knopf.de" }]
readme = "README.md"
license = {text = "Apache License (2.0)"}
dependencies = [
    "click",
    "croniter",
    "pytz",
    "pyyaml"
]
requires-python = ">=3.10"

dynamic = ["version"]

[project.optional-dependencies]
vdv452import = [
    "sqlobject",
    "mysqlclient"
]

mdimport = [
    "sqlobject",
    "mysqlclient"
]

vdv457export = [
    "duckdb",
    "xmltodict",
    "polars-lts-cpu",
    "pyarrow"
]

api = [
    "jsonschema",
    "sqlobject",
    "mysqlclient",
    "fastapi",
    "qrcode[pil]",
    "uvicorn"
]

all = [
    "vcc[vdv452import,mdimport,api,vdv457export]"
]

[tool.setuptools_scm]
write_to = "src/vcclib/version.py"